Updates to brancing

--- a/src/vscode-bicep/content/oam_diagram.html
+++ b/src/vscode-bicep/content/oam_diagram.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>OAM Application Diagram</title>
+    <title>Radius Application Diagram</title>
 </head>
 <body>
     PLACEHOLDER
